
| 🎁
| Added --wait-window flag to configure error window between errors during service create
| https://github.com/knative/client/pull/1645[#1645]

| 🎁
| Added --scale-metric flag to configure metric name
| https://github.com/knative/client/pull/1653[#1653]

| 🎁
| Added subpath functionality to --mount flag
| https://github.com/knative/client/pull/1655[#1655]

|===
## v1.3.0 (2022-03-08)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix traffic split auto redirection to only consider the active revisions
| https://github.com/knative/client/pull/1617[#1617]

| 🐛
| Fix missing Azure auth provider
| https://github.com/knative/client/pull/1616[#1616]

| 🐛
| Remove hardcoded kn for usage and error
| https://github.com/knative/client/pull/1598[#1603]

| 🐛
| Fix display version of Serving & Eventing
| https://github.com/knative/client/pull/1601[#1601]

| 🎁
| Add Knative Eventtype support
| https://github.com/knative/client/pull/1598[#1598]

|===

## v1.2.0 (2022-01-25)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix for file not found error message discrepancy in windows
| https://github.com/knative/client/pull/1575[#1575]

| 🐛
| Fixed panic in `kn channel list`
| https://github.com/knative/client/pull/1568[#1568]

| 🎁
| Add auto-completion for Eventing resources name
| https://github.com/knative/client/pull/1567[#1567]

| 🗑
| Remove deprecated Hugo frontmatter generation for docs
| https://github.com/knative/client/pull/1563[#1563]

| 🎁
| Add auto-completion for Domain name
| https://github.com/knative/client/pull/1562[#1562]

| 🎁
| Add auto-completion for Route name
| https://github.com/knative/client/pull/1561[#1561]

| 🎁
| Add auto-completion for Revision name
| https://github.com/knative/client/pull/1560[#1560]

| 🎁
| Add auto-completion for Broker name
| https://github.com/knative/client/pull/1559[#1559]

| 🎁
| Add auto-completion for Service name